--- a/script.toml
+++ b/script.toml
@@ -352,3 +352,34 @@ Channel = "zsz-self.jvs"
   Inverse = false
   Italic = false
   Variable = ""
+
+[[Triggers]]
+  ID = "login"
+  Name = "login"
+  Enabled = true
+  Match = "^目前共有 .+ 位巫师、.+ 位玩家在线上，以及 .+ 位使用者尝试连线中。$"
+  Send = ""
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = "App.Core.OnConnectLogin"
+  SendTo = 0
+  Sequence = 100
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "system"
+  IgnoreCase = false
+  KeepEvaluating = true
+  OmitFromLog = false
+  OmitFromOutput = false
+  Inverse = false
+  Italic = false
+  Variable = ""
