--- a/script.toml
+++ b/script.toml
@@ -352,7 +352,36 @@ Channel = "zsz-self.jvs"
   Inverse = false
   Italic = false
   Variable = ""
-
+[[Triggers]]
+  ID = "core_response"
+  Name = "core_response"
+  Enabled = true
+  Match = "^设定环境变数：no_more = \"([^-]+)-([^=]+)(=(.*)){0,1}\"$"
+  Send = ""
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = "App.Core.OnResponse"
+  SendTo = 0
+  Sequence = 100
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "system"
+  IgnoreCase = false
+  KeepEvaluating = true
+  OmitFromLog = false
+  OmitFromOutput = false
+  Inverse = false
+  Italic = false
+  Variable = ""
 [[Triggers]]
   ID = "login"
   Name = "login"
@@ -383,3 +412,135 @@ Channel = "zsz-self.jvs"
   Inverse = false
   Italic = false
   Variable = ""
+  [[Triggers]]
+  ID = "busy_end"
+  Name = "busy_end"
+  Enabled = false
+  Match = "^(> )*( 你要花多少精修行？|你吐纳完毕，睁开双眼，站了起来。)$"
+  Send = ""
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = "App.Core.OnBusyEnd"
+  SendTo = 0
+  Sequence = 50
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "busy"
+  IgnoreCase = false
+  KeepEvaluating = true
+  OmitFromLog = false
+  OmitFromOutput = false
+  Inverse = false
+  Italic = false
+  Variable = ""  
+[[Timers]]
+  ID = "steptimeout"
+  Name = "steptimeout"
+  Enabled = false
+  Hour = 0
+  Minute = 0
+  Second = 1.0
+  Send = ""
+  Script = "App.OnMoveStepTimeout"
+  AtTime = false
+  SendTo = 0
+  ActionWhenDisconnectd = false
+  Temporary = false
+  OneShot = false
+  Group = ""
+  Variable = ""
+  OmitFromLog = false
+  OmitFromOutput = false
+[[Timers]]
+  ID = "busy_retry"
+  Name = "busy_retry"
+  Enabled = false
+  Hour = 0
+  Minute = 0
+  Second = 1.0
+  Send = ""
+  Script = "App.Core.OnBusyRetry"
+  AtTime = false
+  SendTo = 0
+  ActionWhenDisconnectd = false
+  Temporary = false
+  OneShot = false
+  Group = ""
+  Variable = ""
+  OmitFromLog = false
+  OmitFromOutput = false
+[[Aliases]]
+  ID = "queue"
+  Name = "queue"
+  Enabled = true
+  Match = "^#(to|do|delay) .*$"
+  Send = ""
+  Script = "App.Core.OnAliasQueue"
+  SendTo = 0
+  Sequence = 0
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Group = ""
+  IgnoreCase = false
+  KeepEvaluating = false
+  Menu = false
+  OmitFromLog = false
+  Variable = ""
+  ReverseSpeedwalk = false
+  OmitFromOutput = false
+  OmitFromCommandHistory = false
+[[Aliases]]
+  ID = "queue2"
+  Name = "queue2"
+  Enabled = true
+  Match = "^#(afterbusy)(\\|.*){0,1}$"
+  Send = ""
+  Script = "App.Core.OnAliasQueue"
+  SendTo = 0
+  Sequence = 0
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Group = ""
+  IgnoreCase = false
+  KeepEvaluating = false
+  Menu = false
+  OmitFromLog = false
+  Variable = ""
+  ReverseSpeedwalk = false
+  OmitFromOutput = false
+  OmitFromCommandHistory = false
+  [[Aliases]]
+  ID = "stop"
+  Name = "stop"
+  Enabled = true
+  Match = "^#stop$"
+  Send = ""
+  Script = "App.Core.OnAliasStop"
+  SendTo = 0
+  Sequence = 0
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Group = ""
+  IgnoreCase = false
+  KeepEvaluating = false
+  Menu = false
+  OmitFromLog = false
+  Variable = ""
+  ReverseSpeedwalk = false
+  OmitFromOutput = false
+  OmitFromCommandHistory = false
