--- a/script.toml
+++ b/script.toml
@@ -416,7 +416,7 @@ Channel = "zsz-self.jvs"
   ID = "busy_end"
   Name = "busy_end"
   Enabled = false
-  Match = "^(> )*( 你要花多少精修行？|你吐纳完毕，睁开双眼，站了起来。)$"
+  Match = "^(> )*(你要花多少精修行？|你吐纳完毕，睁开双眼，站了起来。)$"
   Send = ""
   ColourChangeType = 0
   Colour = 0
@@ -435,6 +435,66 @@ Channel = "zsz-self.jvs"
   LinesToMatch = 0
   WildcardLowerCase = false
   Group = "busy"
+  IgnoreCase = false
+  KeepEvaluating = true
+  OmitFromLog = false
+  OmitFromOutput = false
+  Inverse = false
+  Italic = false
+  Variable = ""
+  [[Triggers]]
+  ID = "move_retry"
+  Name = "move_retry"
+  Enabled = false
+  Match = "^(> )*(只听得江面上隐隐传来：“别急嘛，这儿正忙着呐……”)$"
+  Send = ""
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = "App.Core.OnMoveRetry"
+  SendTo = 0
+  Sequence = 100
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "move"
+  IgnoreCase = false
+  KeepEvaluating = true
+  OmitFromLog = false
+  OmitFromOutput = false
+  Inverse = false
+  Italic = false
+  Variable = ""
+  [[Triggers]]
+  ID = "move_getout"
+  Name = "move_getout"
+  Enabled = false
+  Match = "^(> )*(艄公说“到啦，上岸吧”，随即把一块踏脚板搭上堤岸。)$"
+  Send = "halt;look"
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = ""
+  SendTo = 10
+  Sequence = 100
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "move"
   IgnoreCase = false
   KeepEvaluating = true
   OmitFromLog = false
