--- a/script.toml
+++ b/script.toml
@@ -80,6 +80,36 @@ Channel = "zsz-self.jvs"
   Italic = false
   Variable = ""
   [[Triggers]]
+  ID = "leave"
+  Name = "leave"
+  Enabled = true
+  Match = "^(你赶着镖车往.+驶去。)$"
+  Send = ""
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = ""
+  SendTo = 0
+  Sequence = 9
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "system"
+  IgnoreCase = false
+  KeepEvaluating = false
+  OmitFromLog = true
+  OmitFromOutput = true
+  Inverse = false
+  Italic = false
+  Variable = ""
+  [[Triggers]]
   ID = "line"
   Name = "line"
   Enabled = true
@@ -92,7 +122,7 @@ Channel = "zsz-self.jvs"
   SoundIfInactive = false
   Script = "App.Core.OnLine"
   SendTo = 0
-  Sequence = 1
+  Sequence = 10
   ExpandVariables = false
   Temporary = false
   OneShot = false
@@ -446,7 +476,7 @@ Channel = "zsz-self.jvs"
   ID = "move_retry"
   Name = "move_retry"
   Enabled = false
-  Match = "^(> )*(只听得江面上隐隐传来：“别急嘛，这儿正忙着呐……”)$"
+  Match = "^(> )*(只听得江面上隐隐传来：“别急嘛，这儿正忙着呐……”|你现在正忙着哩。|你手忙脚乱的折腾了半天，可是大车一动不动。|你上一个动作还没有完成，先等等吧。)$"
   Send = ""
   ColourChangeType = 0
   Colour = 0
@@ -502,6 +532,36 @@ Channel = "zsz-self.jvs"
   Inverse = false
   Italic = false
   Variable = ""  
+[[Triggers]]
+  ID = "move_enterboat"
+  Name = "move_enterboat"
+  Enabled = false
+  Match = "^(> )*(一叶扁舟缓缓地驶了过来，|一尾小舟缓缓地驶了过来，|岸边一只渡船上的艄公说道：|岸边一只渡船上的老艄公说道：|湖畔一尾小舟上一个绿衫少女细声说到：|岸边一只小舟上的老艄公说道：)"
+  Send = ""
+  ColourChangeType = 0
+  Colour = 0
+  Wildcard = 0
+  SoundFileName = ""
+  SoundIfInactive = false
+  Script = "App.Core.OnMoveEnterBoat"
+  SendTo = 0
+  Sequence = 70
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Repeat = false
+  MultiLine = false
+  LinesToMatch = 0
+  WildcardLowerCase = false
+  Group = "move"
+  IgnoreCase = false
+  KeepEvaluating = true
+  OmitFromLog = false
+  OmitFromOutput = false
+  Inverse = false
+  Italic = false
+  Variable = ""
 [[Timers]]
   ID = "steptimeout"
   Name = "steptimeout"
@@ -542,7 +602,7 @@ Channel = "zsz-self.jvs"
   ID = "queue"
   Name = "queue"
   Enabled = true
-  Match = "^#(to|do|delay) .*$"
+  Match = "^#(do|delay|to) .*$"
   Send = ""
   Script = "App.Core.OnAliasQueue"
   SendTo = 0
