--- a/script.toml
+++ b/script.toml
@@ -664,3 +664,26 @@ Channel = "zsz-self.jvs"
   ReverseSpeedwalk = false
   OmitFromOutput = false
   OmitFromCommandHistory = false
+   [[Aliases]]
+  ID = "item"
+  Name = "item"
+  Enabled = true
+  Match = "^#item (.+)$"
+  Send = ""
+  Script = "App.Core.OnAliasItem"
+  SendTo = 0
+  Sequence = 0
+  ExpandVariables = false
+  Temporary = false
+  OneShot = false
+  Regexp = true
+  Group = ""
+  IgnoreCase = false
+  KeepEvaluating = false
+  Menu = false
+  OmitFromLog = false
+  Variable = ""
+  ReverseSpeedwalk = false
+  OmitFromOutput = false
+  OmitFromCommandHistory = false
+  
